--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
 
         header .logo h1 {
-            font-size: 2.5em;
+            font-size: 2em;
             letter-spacing: 2px;
             color: #fff;
             font-weight: bold;
@@ -61,7 +61,7 @@
         nav ul li a {
             text-decoration: none;
             color: #fff;
-            font-size: 1.2em;
+            font-size: 1em;
             transition: color 0.3s ease;
         }
 
@@ -74,7 +74,7 @@
             background-image: url('https://via.placeholder.com/1600x900'); /* Placeholder Image */
             background-size: cover;
             background-position: center;
-            height: 100%;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -86,22 +86,20 @@
             background-color: rgba(0, 0, 0, 0.5);
             padding: 30px;
             border-radius: 10px;
-            animation: slideIn 1.5s ease-out;
         }
 
         .hero-text h2 {
-            font-size: 3em;
+            font-size: 2.5em;
             margin-bottom: 10px;
-            animation: fadeInText 1.5s ease-out;
         }
 
         .hero-text p {
-            font-size: 1.5em;
+            font-size: 1.2em;
             margin-bottom: 20px;
         }
 
         .cta-btn {
-            font-size: 1.2em;
+            font-size: 1em;
             padding: 15px 30px;
             background-color: #ff6347;
             color: #fff;
@@ -121,13 +119,13 @@
         }
 
         .portfolio h2 {
-            font-size: 2.5em;
+            font-size: 2em;
             margin-bottom: 30px;
         }
 
         .gallery {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
             gap: 15px;
         }
 
@@ -150,12 +148,12 @@
         }
 
         .about h2 {
-            font-size: 2.5em;
+            font-size: 2em;
             margin-bottom: 20px;
         }
 
         .about p {
-            font-size: 1.5em;
+            font-size: 1.2em;
             line-height: 1.6;
         }
 
@@ -167,7 +165,7 @@
         }
 
         .contact h2 {
-            font-size: 2.5em;
+            font-size: 2em;
             margin-bottom: 20px;
         }
 
@@ -178,7 +176,8 @@
         }
 
         .contact input, .contact textarea {
-            width: 50%;
+            width: 80%;
+            max-width: 500px;
             padding: 15px;
             margin-bottom: 20px;
             border: none;
@@ -187,7 +186,7 @@
         }
 
         .contact button {
-            font-size: 1.2em;
+            font-size: 1em;
             padding: 15px 30px;
             background-color: #ff6347;
             color: #fff;
@@ -209,14 +208,14 @@
         }
 
         footer p {
-            font-size: 1.2em;
+            font-size: 1em;
         }
 
         .social-icons a {
             text-decoration: none;
             color: #fff;
             margin: 0 10px;
-            font-size: 1.5em;
+            font-size: 1.2em;
             transition: color 0.3s ease;
         }
 
@@ -234,23 +233,46 @@
             }
         }
 
-        @keyframes fadeInText {
-            0% {
-                opacity: 0;
-                transform: translateY(20px);
+        /* Media Queries */
+        @media (max-width: 768px) {
+            header .logo h1 {
+                font-size: 1.5em;
             }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
+
+            nav ul {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .hero-text h2 {
+                font-size: 2em;
+            }
+
+            .hero-text p {
+                font-size: 1em;
+            }
+
+            .cta-btn {
+                padding: 10px 20px;
+                font-size: 0.9em;
+            }
+
+            .contact input, .contact textarea {
+                width: 90%;
             }
         }
 
-        @keyframes slideIn {
-            0% {
-                transform: translateX(-200px);
+        @media (max-width: 480px) {
+            .hero-text h2 {
+                font-size: 1.8em;
             }
-            100% {
-                transform: translateX(0);
+
+            .hero-text p {
+                font-size: 0.9em;
+            }
+
+            .cta-btn {
+                font-size: 0.8em;
             }
         }
     </style>
@@ -329,4 +351,4 @@
         </footer>
     </div>
 </body>
-                  </html>
+</html>
