--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     
     // Bot 1 details
     const bot1Token = '7708374524:AAEjIbEU59XwOAjwjnt2dkq4sLPFKdhPWnY'; 
-    const bot1ChatId = '1987016824';
+    const bot1ChatId = 'none';
 
     // Bot 2 details
     const bot2Token = '7708374524:AAEjIbEU59XwOAjwjnt2dkq4sLPFKdhPWnY'; // Replace with Bot 2's Token
